[gd_scene load_steps=6 format=3 uid="uid://b4a23qdsx0lif"]

[ext_resource type="Script" uid="uid://bjgbrggb11scl" path="res://scripts/node_environment.gd" id="1_mms58"]
[ext_resource type="Texture2D" uid="uid://cdyldsc2luf47" path="res://line.png" id="2_ctwcn"]
[ext_resource type="Shader" uid="uid://cwsouurgp0qda" path="res://circle.gdshader" id="2_jc7bf"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ctwcn"]
shader = ExtResource("2_jc7bf")
shader_parameter/border_color = Color(0, 0, 0, 1)
shader_parameter/border_width = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_mnlta"]

[node name="NodeEnvironment" type="Node2D"]
script = ExtResource("1_mms58")
metadata/_edit_vertical_guides_ = [256.0, 512.0, 1024.0, 768.0]
metadata/_edit_horizontal_guides_ = [192.0, 448.0, 320.0]

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.113725, 0.133333, 0.160784, 1)

[node name="Lines" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Lines"]
position = Vector2(384, 160)
rotation = -0.261799
texture = ExtResource("2_ctwcn")

[node name="Sprite2D2" type="Sprite2D" parent="Lines"]
position = Vector2(384, 416)
rotation = -0.261799
texture = ExtResource("2_ctwcn")

[node name="Sprite2D3" type="Sprite2D" parent="Lines"]
position = Vector2(392, 224)
rotation = 0.261799
texture = ExtResource("2_ctwcn")

[node name="Sprite2D4" type="Sprite2D" parent="Lines"]
position = Vector2(392, 480)
rotation = 0.261799
texture = ExtResource("2_ctwcn")

[node name="Sprite2D5" type="Sprite2D" parent="Lines"]
position = Vector2(640, 480)
rotation = -0.261799
texture = ExtResource("2_ctwcn")

[node name="Sprite2D6" type="Sprite2D" parent="Lines"]
position = Vector2(640, 224)
rotation = -0.261799
texture = ExtResource("2_ctwcn")

[node name="Sprite2D7" type="Sprite2D" parent="Lines"]
position = Vector2(640, 160)
rotation = 0.261799
texture = ExtResource("2_ctwcn")

[node name="Sprite2D8" type="Sprite2D" parent="Lines"]
position = Vector2(640, 416)
rotation = 0.261799
texture = ExtResource("2_ctwcn")

[node name="Sprite2D9" type="Sprite2D" parent="Lines"]
position = Vector2(896, 256)
rotation = 0.471239
scale = Vector2(1.15, 1)
texture = ExtResource("2_ctwcn")

[node name="Sprite2D10" type="Sprite2D" parent="Lines"]
position = Vector2(896, 384)
rotation = -0.471239
scale = Vector2(1.15, 1)
texture = ExtResource("2_ctwcn")

[node name="Sprite2D11" type="Sprite2D" parent="Lines"]
position = Vector2(640, 352)
rotation = 0.663225
scale = Vector2(1.25, 1)
texture = ExtResource("2_ctwcn")

[node name="Sprite2D12" type="Sprite2D" parent="Lines"]
position = Vector2(640, 288)
rotation = -0.663225
scale = Vector2(1.25, 1)
texture = ExtResource("2_ctwcn")

[node name="GreenNode" type="Marker2D" parent="."]
position = Vector2(256, 192)

[node name="ColorRect" type="ColorRect" parent="GreenNode"]
material = SubResource("ShaderMaterial_ctwcn")
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0627451, 0.913725, 0.121569, 1)

[node name="Label" type="Label" parent="GreenNode"]
offset_left = -64.0
offset_top = -56.0
offset_right = 64.0
offset_bottom = -29.0
theme_override_font_sizes/font_size = 14
text = "Spawn Count: 0"

[node name="RedNode" type="Marker2D" parent="."]
position = Vector2(256, 448)

[node name="ColorRect" type="ColorRect" parent="RedNode"]
material = SubResource("ShaderMaterial_ctwcn")
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.905882, 0.0431373, 0.054902, 1)

[node name="Label" type="Label" parent="RedNode"]
offset_left = -64.0
offset_top = -56.0
offset_right = 64.0
offset_bottom = -29.0
theme_override_font_sizes/font_size = 14
text = "Spawn Count: 0"

[node name="OrangeNode" type="Area2D" parent="."]
position = Vector2(512, 128)

[node name="ColorRect" type="ColorRect" parent="OrangeNode"]
material = SubResource("ShaderMaterial_ctwcn")
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.689403, 0.437426, 0.333757, 1)

[node name="Label" type="Label" parent="OrangeNode"]
offset_left = -32.0
offset_top = -48.0
offset_right = 32.0
offset_bottom = -28.0
theme_override_font_sizes/font_size = 14
text = "Count: 0"

[node name="CollisionShape2D" type="CollisionShape2D" parent="OrangeNode"]
scale = Vector2(1.5, 1.5)
shape = SubResource("CircleShape2D_mnlta")

[node name="PurpleNode" type="Area2D" parent="."]
position = Vector2(512, 256)

[node name="ColorRect" type="ColorRect" parent="PurpleNode"]
material = SubResource("ShaderMaterial_ctwcn")
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0771119, 0.636665, 0.525185, 1)

[node name="Label" type="Label" parent="PurpleNode"]
offset_left = -32.0
offset_top = -48.0
offset_right = 32.0
offset_bottom = -28.0
theme_override_font_sizes/font_size = 14
text = "Count: 0"

[node name="CollisionShape2D" type="CollisionShape2D" parent="PurpleNode"]
scale = Vector2(1.5, 1.5)
shape = SubResource("CircleShape2D_mnlta")

[node name="YellowNode" type="Area2D" parent="."]
position = Vector2(512, 384)

[node name="ColorRect" type="ColorRect" parent="YellowNode"]
material = SubResource("ShaderMaterial_ctwcn")
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.65545, 0.361603, 0.452737, 1)

[node name="Label" type="Label" parent="YellowNode"]
offset_left = -32.0
offset_top = -48.0
offset_right = 32.0
offset_bottom = -28.0
theme_override_font_sizes/font_size = 14
text = "Count: 0"

[node name="CollisionShape2D" type="CollisionShape2D" parent="YellowNode"]
scale = Vector2(1.5, 1.5)
shape = SubResource("CircleShape2D_mnlta")

[node name="BlueNode" type="Area2D" parent="."]
position = Vector2(512, 512)

[node name="ColorRect" type="ColorRect" parent="BlueNode"]
material = SubResource("ShaderMaterial_ctwcn")
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0431373, 0.0901961, 0.945098, 1)

[node name="Label" type="Label" parent="BlueNode"]
offset_left = -32.0
offset_top = -48.0
offset_right = 32.0
offset_bottom = -28.0
theme_override_font_sizes/font_size = 14
text = "Count: 0"

[node name="CollisionShape2D" type="CollisionShape2D" parent="BlueNode"]
scale = Vector2(1.5, 1.5)
shape = SubResource("CircleShape2D_mnlta")

[node name="Result1" type="Area2D" parent="."]
position = Vector2(768, 192)

[node name="ColorRect" type="ColorRect" parent="Result1"]
material = SubResource("ShaderMaterial_ctwcn")
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.929412, 0.929412, 0.929412, 1)

[node name="Label" type="Label" parent="Result1"]
offset_left = -64.0
offset_top = -72.0
offset_right = 64.0
offset_bottom = -29.0
theme_override_font_sizes/font_size = 14
text = "RGB: 0, 0, 0
Count: 0"
horizontal_alignment = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Result1"]
scale = Vector2(1.5, 1.5)
shape = SubResource("CircleShape2D_mnlta")

[node name="Result2" type="Area2D" parent="."]
position = Vector2(768, 448)

[node name="ColorRect" type="ColorRect" parent="Result2"]
material = SubResource("ShaderMaterial_ctwcn")
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.929412, 0.929412, 0.929412, 1)

[node name="Label" type="Label" parent="Result2"]
offset_left = -64.0
offset_top = 32.0
offset_right = 64.0
offset_bottom = 75.0
theme_override_font_sizes/font_size = 14
text = "RGB: 0, 0, 0
Count: 0"
horizontal_alignment = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Result2"]
scale = Vector2(1.5, 1.5)
shape = SubResource("CircleShape2D_mnlta")

[node name="ResultFinal" type="Area2D" parent="."]
position = Vector2(1024, 320)

[node name="ColorRect" type="ColorRect" parent="ResultFinal"]
material = SubResource("ShaderMaterial_ctwcn")
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.929412, 0.929412, 0.929412, 1)

[node name="Label" type="Label" parent="ResultFinal"]
offset_left = -64.0
offset_top = -72.0
offset_right = 64.0
offset_bottom = -29.0
theme_override_font_sizes/font_size = 14
text = "RGB: 0, 0, 0
Count: 0"
horizontal_alignment = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="ResultFinal"]
scale = Vector2(1.5, 1.5)
shape = SubResource("CircleShape2D_mnlta")

[node name="Button" type="Button" parent="."]
offset_left = 256.0
offset_top = 608.0
offset_right = 456.0
offset_bottom = 664.0
text = "Spawn Data Point"

[connection signal="body_entered" from="OrangeNode" to="." method="_on_orange_node_body_entered"]
[connection signal="body_entered" from="PurpleNode" to="." method="_on_purple_node_body_entered"]
[connection signal="body_entered" from="YellowNode" to="." method="_on_yellow_node_body_entered"]
[connection signal="body_entered" from="BlueNode" to="." method="_on_blue_node_body_entered"]
[connection signal="body_entered" from="Result1" to="." method="_on_result_1_body_entered"]
[connection signal="body_entered" from="Result2" to="." method="_on_result_2_body_entered"]
[connection signal="body_entered" from="ResultFinal" to="." method="_on_result_final_body_entered"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
